[build-system]
requires = ["setuptools>=61.0","packaging","cmake>=3.16","numpy>=2.1","nanobind"]
build-backend = "setuptools.build_meta"

[project]
name = "pycompadre"
dependencies = [
    "numpy>=2.1",
]
authors = [
  {name = "Paul Kuberry", email = "pakuber@sandia.gov"},
]
classifiers=[
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: Unix",
]
requires-python = ">=3.10"
dynamic = ["version", "description"]
readme = "README.md"

[project.urls]
Homepage = "https://github.com/sandialabs/compadre"
Documentation = "https://sandialabs.github.io/compadre/pycompadre/index.html"
Repository = "https://github.com/sandialabs/compadre.git"
Issues = "https://github.com/sandialabs/compadre/issues"
Changelog = "https://github.com/sandialabs/compadre/wiki/Changelog"
